# HexaSLM

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01-hexaslm-training.ipynb  02-hexaslm-inference.ipynb  03-hexaslm-eval.ipynb  03-hexaslm-evaluation.ipynb
src/hexa_slm/: __init__.py
src/hexa_slm/inference/: __init__.py  console.py
src/hexa_slm/utils/: __init__.py  model_loader.py
